--- a/resources/multi-arch/Deployment-php-apache-multiarch.yml
+++ b/resources/multi-arch/Deployment-php-apache-multiarch.yml
@@ -19,3 +19,6 @@ spec:
           ports:
             - containerPort: 80
               protocol: TCP
+      securityContext: {}
+      serviceAccount: php-apache-sa
+      serviceAccountName: php-apache-sa
